added some extre build to pom.xml